force-app/main/default/objects/Lead_Platform_Event__e/fields/Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Owner_Type__c</fullName>
    <label>Owner Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>