force-app/main/default/objects/Lead_Platform_Event__e/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <length>16</length>
    <type>Text</type>
</CustomField>